...
            .keyboardShortcut("t", modifiers: [.option, .command])

            Button(
                isInterfaceHidden
                    ? String(
                        localized: "viewcommands.show-interface",
                        defaultValue: "Show Interface",
                        comment: "View menu command to show the interface"
                    )
                    : String(
                        localized: "viewcommands.hide-interface",
                        defaultValue: "Hide Interface",
                        comment: "View menu command to hide the interface"
                    )
            ) {
                windowController?.toggleInterface(shouldHide: !isInterfaceHidden)
            }
            .disabled(windowController == nil)
...
